--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
-      
+      var firebaseConfig = {
+    apiKey: "AIzaSyCPeCZeH3znhXoOShTcEVb0cU0ctRsxdck",
+    authDomain: "racing-game-bc096.firebaseapp.com",
+    databaseURL: "https://racing-game-bc096.firebaseio.com",
+    projectId: "racing-game-bc096",
+    storageBucket: "racing-game-bc096.appspot.com",
+    messagingSenderId: "766801908662",
+    appId: "1:766801908662:web:9ed550025321dd70b2a717"
+  };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
